# malthus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
malthus/: birth.py  death.py  models.py
tests/: test_birth.py  test_death.py  test_model.py
